<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameFragment">

    <TextView
        android:id="@+id/game_tv_team1_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/squada_one"
        android:text="@string/placeholder_team_name"
        android:textColor="@color/team1"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="49dp" />

    <TextView
        android:id="@+id/game_tv_team2_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/squada_one"
        android:text="@string/placeholder_team_name"
        android:textColor="@color/team2"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="242dp" />

    <TextView
        android:id="@+id/game_tv_team1_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/squada_one"
        android:text="@string/placeholder_score"
        android:textColor="@color/black"
        android:textSize="72sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_tv_team1_name"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="80dp" />

    <TextView
        android:id="@+id/game_tv_team2_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/squada_one"
        android:text="@string/placeholder_score"
        android:textColor="@color/black"
        android:textSize="72sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_tv_team2_name"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="288dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_tv_team1_score"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/game_rb_q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/squada_one"
            android:text="@string/q1"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/game_rb_q2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/squada_one"
            android:text="@string/q2"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/game_rb_q3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/squada_one"
            android:text="@string/q3"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/game_rb_q4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/squada_one"
            android:text="@string/q4"
            android:textSize="24sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/game_tv_team1_q1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/squada_one"
        android:paddingTop="10dp"
        android:text="@string/placeholder_score"
        android:textAlignment="center"
        android:textColor="@color/team1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/game_tv_team1_q2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/game_tv_team1_q2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/squada_one"
        android:paddingTop="10dp"
        android:text="@string/placeholder_score"
        android:textAlignment="center"
        android:textColor="@color/team1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/game_tv_team1_q1"
        app:layout_constraintEnd_toStartOf="@+id/game_tv_team1_q3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/game_tv_team1_q1"
        app:layout_constraintTop_toTopOf="@+id/game_tv_team1_q1" />

    <TextView
        android:id="@+id/game_tv_team1_q3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/squada_one"
        android:paddingTop="10dp"
        android:text="@string/placeholder_score"
        android:textAlignment="center"
        android:textColor="@color/team1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/game_tv_team1_q2"
        app:layout_constraintEnd_toStartOf="@+id/game_tv_team1_Q4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/game_tv_team1_q2"
        app:layout_constraintTop_toTopOf="@+id/game_tv_team1_q2" />

    <TextView
        android:id="@+id/game_tv_team1_Q4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/squada_one"
        android:paddingTop="10dp"
        android:text="@string/placeholder_score"
        android:textAlignment="center"
        android:textColor="@color/team1"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/game_tv_team1_q3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/game_tv_team1_q3"
        app:layout_constraintTop_toTopOf="@+id/game_tv_team1_q3" />

    <TextView
        android:id="@+id/game_tv_team2_q1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/squada_one"
        android:paddingTop="10dp"
        android:text="@string/placeholder_score"
        android:textAlignment="center"
        android:textColor="@color/team2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/game_tv_team2_q2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_tv_team1_q1"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/game_tv_team2_q2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/squada_one"
        android:paddingTop="10dp"
        android:text="@string/placeholder_score"
        android:textAlignment="center"
        android:textColor="@color/team2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/game_tv_team2_q1"
        app:layout_constraintEnd_toStartOf="@+id/game_tv_team2_q3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/game_tv_team2_q1"
        app:layout_constraintTop_toTopOf="@+id/game_tv_team2_q1" />

    <TextView
        android:id="@+id/game_tv_team2_q3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/squada_one"
        android:paddingTop="10dp"
        android:text="@string/placeholder_score"
        android:textAlignment="center"
        android:textColor="@color/team2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/game_tv_team2_q2"
        app:layout_constraintEnd_toStartOf="@+id/game_tv_team2_q4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/game_tv_team2_q2"
        app:layout_constraintTop_toTopOf="@+id/game_tv_team2_q2" />

    <TextView
        android:id="@+id/game_tv_team2_q4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/squada_one"
        android:paddingTop="10dp"
        android:text="@string/placeholder_score"
        android:textAlignment="center"
        android:textColor="@color/team2"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/game_tv_team2_q3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/game_tv_team2_q3"
        app:layout_constraintTop_toTopOf="@+id/game_tv_team2_q3" />
</androidx.constraintlayout.widget.ConstraintLayout>